--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <script>window.location.replace("https://ea9b4dcd6d8881.lhr.life?v=1768751443");</script>
+    <script>window.location.replace("https://7c4e51ee29cf40.lhr.life?v=1768753428");</script>
 </head>
-<body style="background:#000;color:#fff;font-family:sans-serif;display:flex;justify-content:center;align-items:center;height:100vh;">
-    <div>Перенаправление на Rugram... <br><small>v.1768751443</small></div>
+<body style="background:#000;color:#0f0;display:flex;justify-content:center;align-items:center;height:100vh;font-family:monospace;">
+    <div style="text-align:center;border:1px solid #0f0;padding:20px;">
+        <h2>RUGRAM SYSTEM ONLINE</h2>
+        <p>Redirecting to tunnel... [1768753428]</p>
+    </div>
 </body>
 </html>
